--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <meta name="description" content="My personal website.">
         <meta name="author" content="ExistingPerson08">
     </head>
-    <body class="bg-black">
-        <div class="p-5 m-auto w-full md:w-2/3 xl:w-1/2 text-white md:border-green-600 md:border-2 rounded-lg mt-4 md:mt-10 mb-10">
+    <body style="background-image: url('bg.jpg'); background-size: cover; background-attachment: fixed;">
+
+        <div class="fixed top-0 left-0 w-screen h-screen opacity-90 bg-black z-[10]">
+
+        <div class="p-5 m-auto w-full md:w-2/3 xl:w-1/2 text-white md:border-green-600 md:border-2 rounded-lg mt-4 md:mt-10 mb-10 z-[20]">
             <h1 class="text-4xl font-bold text-yellow-500">ExistingPerson08</h1>
             <p class="text-4xl font-bold text-yellow-500 mb-5">--------------------</p>
             <div class="prose prose-invert">
@@ -46,5 +49,6 @@
                 <br><br>
             </div>
         </div> 
+        </div>
     </body>
 </html>
